[package]
name = "codestat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Your Name <your.email@example.com>"]
description = "Fast and safe code statistics tool"
license = "MIT"
repository = "https://github.com/Cactusinhand/codestat"
homepage = "https://github.com/Cactusinhand/codestat"
readme = "README.md"
keywords = ["cli", "code-statistics", "loc", "counter", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
num_cpus = "1.16"
tempfile = "3.14"
lazy_static = "1.5"
dirs = "5.0"
md5 = "0.7"

[features]
default = ["simd"]
simd = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
