[package]
name = "codestat"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Fast and safe code statistics tool"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
